                     insensitiv, and Invisible.
060516 cs  ge        Bit type added in Invisible to check visibility on bits in a bitmap.
060522 cs  ge        Bugfix for $user attributes. Scan function for dynamics wasn't called. 
060524 cs  ge        Property for selected cell color in GrowTable.
060615 cs  xtt       Object attributes channels and signals displayed in Device table.
060628 cs  glow      Adjustment property (Left/Right/Center) added to annotations and table object.
060628 cs  ge        New Value, ValueInput and Button subgraphs with Right and Center adjustment.
060629 cs  ge        Format for Time and DeltaTime in table added.
070112 cs  xtt       Gtk version of xtt.
070112 cs  ge        Fileview for import of pwg and image files.
070112 cs  xtt       Font size in alarmtexts in operator window can be changed.
070112 cs  xtt       Nodename displayed i Xtt title.
070112 cs  xtt       New syntax for function key definition file (gtk version).
070115 cs  curve     Scroll and zoom with arrow keys and mouse wheel. Scroll buttons in tools.  
070116 cs  xtt       Toolbar with icons for the methods of the selected object added.
070117 cs  ge        Property EscapeStore for dynamic type ValueInput added.
070123 cs  xtt       Bugfix in remtrans table. If multicast object found, object was not displayed. 
070125 cs  ev        Problem with double appearence of alarm when communication is bad fixed.
070130 cs  web       _opwin removed from homepage name. index.html set as defaultname.
070130 cs  web       Possibility to configure which objectgraph jar-files that should be loaded (BaseComponent or ABB).
070221 cs  xtt       Problems with national characters in alarmtext in operator window fixed.
070327 cs  ge        Bugfix in navigator window, drawing attempt in zero buffer removed.
070327 cs  ge        Problems with national characters in ge attribute editor fixed.
070402 cs  ge        Dyntype invisible works also for attributes of type Float32.