@@ -34,3 +34,5 @@
 070327 cs  ge        Bugfix in navigator window, drawing attempt in zero buffer removed.
 070327 cs  ge        Problems with national characters in ge attribute editor fixed.
 070402 cs  ge        Dyntype invisible works also for attributes of type Float32.
+070425 cs  ge        Bit type added in DigColor to view bits in a bitmap.
+070426 cs  glow      Bugfix in imageobject, image was not always freed when graph was closed.
